-fixed an error in the notice dialog for downloadQueue.js that caused buttons not to be rendered and the request indicator not to disappear on failed downloads. -fixed more memory leaks.  Preview controls that are subviews of layer rows were not properly cleaned up. -added css class "slideVertical" to the collapsed table, so that it moves with the advanced search box expansion/contraction. -added some info and a bean definition (commented out) in security-app-context.xml to support ldap authentication

--- a/geoportal_1/src/main/webapp/resources/css/mapDiv.css
+++ b/geoportal_1/src/main/webapp/resources/css/mapDiv.css
@@ -42,12 +42,14 @@
 #nwCorner {
     border-color: #1D6EEF rgba(0, 0, 0, 0) rgba(0, 0, 0, 0) rgba(0, 0, 0, 0);
     border-width: 30px 30px 0 0;
+    left: 25px;
 }
 
 #swCorner {
     border-color: rgba(0, 0, 0, 0) rgba(0, 0, 0, 0) rgba(0, 0, 0, 0) #1D6EEF;
     border-width: 30px 0 0 30px;
     bottom: 0;
+    left: 25px;
 }
 
 .corner {
